[package]
name = "astra"
version = "0.7.0"
description = "Astra Protocol V7 - Token Launchpad with Bonding Curves"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "astra"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata", "associated_token"] }
constant_time_eq = "=0.3.1"
pyth-solana-receiver-sdk = "0.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
